programs/backup_ver3_ukr.txt
$ python backup_ver3_ukr.py
  File "backup_ver3.py", line 39
    ціль = сьогодні + os.sep + зараз + '_' +
                                        ^
SyntaxError: invalid syntax
